[package]
name = "frankweiler-tauri"
version = "0.10.0"
edition = "2021"
rust-version = "1.83"
publish = false

# Standalone workspace, deliberately NOT a member of frankweiler/backend's
# workspace: Bazel's crate_universe (`crate.from_cargo` in MODULE.bazel)
# ingests that workspace, and the tauri dependency tree is cargo-only.
# This crate is driven by `cargo tauri` / `pnpm dlx @tauri-apps/cli`, not
# Bazel — see README.md.
#
# The crate is a thin process manager: it spawns the Bazel-built
# `frankweiler-http` binary (bundled under Resources/binaries/) rather
# than linking the backend in, so there are NO path deps into
# frankweiler/backend and no sqlx/doltlite/rust-embed plumbing here.
[workspace]

# `time` is held at 0.3.47 in Cargo.lock: 0.3.48's new
# `format_item::ModifierValue` blanket impl breaks coherence (E0119) for
# the `impl<T: Into<..>> From<T>` impls in tauri-utils 2.9 and cookie
# 0.18. If `cargo update` drags `time` forward and the build breaks,
# re-pin with `cargo update -p time --precise 0.3.47` (or whatever
# release restores coherence).

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
anyhow = "1.0"
