load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Playwright e2e suite. Run via:
#   bazelisk run //frankweiler/ui:e2e
#
# Why sh_binary and not sh_test: the suite runs `pnpm exec playwright`
# against the workspace UI tree (so it picks up the un-bazeled
# node_modules + browser cache). `bazelisk run` exposes
# BUILD_WORKSPACE_DIRECTORY, which the wrapper uses to cd into
# frankweiler/ui. `bazelisk test` does not, and Playwright/pnpm aren't
# wired into rules_js here, so a hermetic `sh_test` would require a
# substantial node toolchain integration.
#
# The wrapper passes the bazel-built backend binary path through to the
# Playwright config so e2e runs exercise the same artifact that `bazelisk
# run //frankweiler:dev` does.
sh_binary(
    name = "e2e",
    srcs = ["run_e2e.sh"],
    data = [
        "//frankweiler/backend/http:frankweiler_http_bin",
        "//tests/fixtures:ingested_tng",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
