load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Pre-built Vite output. Today this is a checked-out source-tree
# `dist/` directory (run `pnpm build` in this dir to regenerate); a
# follow-up will replace this filegroup with an `aspect_rules_js`
# `vite_build` rule that produces it hermetically under Bazel. The
# `frankweiler_http` rust_library consumes this via `compile_data`
# so the rust-embed proc macro bakes the bytes into the binary at
# compile time.
#
# `allow_empty = False`: refuse to build silently against an empty
# dist/. A fresh checkout has no dist/ (it's `.gitignore`d), so this
# fires "you forgot to `pnpm build`" instead of producing a binary
# that 500s on every UI request.
filegroup(
    name = "dist_files",
    srcs = glob(
        ["dist/**"],
        allow_empty = False,
    ),
    visibility = ["//frankweiler:__subpackages__"],
)

# Playwright e2e suite, exposed two ways from the same wrapper script:
#   bazelisk run  //frankweiler/ui:e2e        — interactive
#   bazelisk test //frankweiler/ui:e2e_test   — picked up by `bazel test //...`
#
# The wrapper does NOT manage node / pnpm / Playwright browsers itself —
# it shells out to the host pnpm and reuses the source-tree node_modules
# + ~/Library/Caches/ms-playwright. That's deliberately non-hermetic:
# the goal here is "bazel test //... actually exercises the e2e suite",
# not full Bazel ownership of the JS toolchain.
#
# In `run` mode the wrapper uses BUILD_WORKSPACE_DIRECTORY; in `test`
# mode it resolves the source UI dir by following the runfiles symlink
# of frankweiler/ui/package.json back to its origin.

_E2E_DATA = [
    "//frankweiler/backend/http:frankweiler_http_bin",
    "//tests/fixtures:materialize_tng_root",
    "package.json",
]

_E2E_DEPS = ["@bazel_tools//tools/bash/runfiles"]

sh_binary(
    name = "e2e",
    srcs = ["run_e2e.sh"],
    data = _E2E_DATA,
    deps = _E2E_DEPS,
)

sh_test(
    name = "e2e_test",
    srcs = ["run_e2e.sh"],
    data = _E2E_DATA,
    deps = _E2E_DEPS,
    # Needs network (Playwright may fetch browser binary) and the host's
    # pnpm / node / Playwright cache. Skipped in sandboxed CI runs that
    # don't pass --test_tag_filters=-requires-network or similar.
    tags = [
        "external",
        "no-sandbox",
        "requires-network",
    ],
    # Inherit the user's PATH and HOME so the script can find pnpm / node
    # and reuse ~/Library/Caches/ms-playwright (the browser cache) /
    # ~/.local/share/pnpm. Bazel scrubs the test env otherwise.
    env_inherit = [
        "PATH",
        "HOME",
    ],
)
