load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "sqlx_doltlite_loadtest",
    srcs = ["src/main.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@frankweiler_crates//:anyhow",
        "@frankweiler_crates//:clap",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:tempfile",
        "@frankweiler_crates//:tokio",
    ],
)
