load("@rules_python//python:defs.bzl", "py_library")
load("@py_pip//:requirements.bzl", "requirement")

py_library(
    name = "download",
    srcs = glob(["*.py"]),
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        requirement("curl-cffi"),
        requirement("tqdm"),
    ],
)
