load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@py_pip//:requirements.bzl", "requirement")

py_library(
    name = "ingest",
    srcs = glob(["**/*.py"]),
    imports = [".."],  # parents of `ingest/` is `src/`; both download and ingest are top-level
    visibility = ["//visibility:public"],
    deps = [
        "//src:jsonl_io",
        requirement("pydantic"),
        requirement("pyyaml"),
        requirement("typer"),
        requirement("pymysql"),
        requirement("tqdm"),
    ],
)

# Console-script entrypoint exposed as a Bazel binary so genrules can
# `$(execpath :cli)` it. Mirrors the `ingest` script that pyproject emits.
py_binary(
    name = "cli",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = [":ingest"],
)
