load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Materialize a frankweiler data root from :ingested_tng + :ingested_tng_qmd
# into a caller-provided directory. Used by both `//frankweiler:dev_tng`
# (interactive eyeballing) and the UI e2e test (fixture setup) so the two
# paths can't drift apart.
sh_binary(
    name = "materialize_tng_root",
    srcs = ["materialize_tng_root.sh"],
    data = [
        ":ingested_tng",
        ":ingested_tng_qmd",
    ],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Cacheable, ingested-fixture artifact.
#
# `bazelisk build //tests/fixtures:ingested_tng` runs the full
# pipeline (ingest -> render) against the checked-in TNG-themed source
# JSON and emits two outputs:
#
#   * backend_index.doltlite_db -- the doltlite (SQLite-compatible) file the backend reads.
#   * qmd.tar   -- the rendered conversation markdown tree.

filegroup(
    name = "source_json",
    srcs = glob([
        "github_api/**/*.jsonl",
        "gitlab_api/**/*.jsonl",
        "notion_web/**/*.jsonl",
    ]) + [
        # Provider fixtures moved into their respective Rust crates so
        # the sample data is co-located with the code under test.
        "//frankweiler/backend/etl/providers/slack:tng_fixture",
        "//frankweiler/backend/etl/providers/chatgpt:tng_fixture",
        "//frankweiler/backend/etl/providers/anthropic:tng_fixture",
    ],
    visibility = ["//visibility:public"],
)

# Cacheable, deterministic ingest of the TNG fixtures via
# //frankweiler/backend/sync:frankweiler_sync_bin. The orchestrator
# walks every provider's Translate step over the checked-in fixtures,
# loads the resulting sidecars into a scratch Dolt repo, then writes
# dump.sql + rendered_md/ to a staging dir; this rule then tars the
# markdown tree into qmd.tar. Tar packaging is *not* the pipeline
# binary's concern — it operates at the layer of DB + qmd files.
genrule(
    name = "ingested_tng",
    srcs = [":source_json"],
    outs = [
        "ingested/backend_index.doltlite_db",
        "ingested/qmd.tar",
    ],
    tools = [
        "//frankweiler/backend/sync:frankweiler_sync_bin",
        "run_sync_pipeline.py",
        "tar_qmd.py",
    ],
    cmd = " && ".join([
        " ".join([
            "python3 $(execpath run_sync_pipeline.py)",
            "$(execpath //frankweiler/backend/sync:frankweiler_sync_bin)",
            "'2369-04-15T00:00:00+00:00'",
            "$(RULEDIR)/sync_workspace",
            "frankweiler/backend/etl/providers/anthropic/tests/fixtures/anthropic_api",
            "frankweiler/backend/etl/providers/chatgpt/tests/fixtures/chatgpt_api",
            "frankweiler/backend/etl/providers/slack/tests/fixtures/slack_api",
            "tests/fixtures/github_api",
            "tests/fixtures/gitlab_api",
            "tests/fixtures/notion_web",
        ]),
        # Copy the doltlite (SQLite-compatible) file out of the workspace.
        "cp $(RULEDIR)/sync_workspace/backend_index.doltlite_db $(execpath ingested/backend_index.doltlite_db)",
        # Tar the rendered_md tree hermetically into qmd.tar.
        " ".join([
            "python3 $(execpath tar_qmd.py)",
            "$(RULEDIR)/sync_workspace",
            "$(execpath ingested/qmd.tar)",
        ]),
    ]),
    visibility = ["//visibility:public"],
)

# Build a QMD (BM25 + embeddings) index over the rendered TNG markdown tree
# and emit it as an overlay tar on top of `:ingested_tng`'s qmd.tar.
#
# Output `qmd-index.tar` mirrors qmd.tar's layout: paths rooted at `qmd/`,
# so extracting both archives into the same directory (e.g. with
# `tar -x --strip-components=1`) yields a complete root data directory —
# markdown tree plus `.frankweiler/qmd/index.sqlite`.
#
# Caveats:
#   * Requires `node` (and network on first run for npx to fetch qmd and its
#     ~2GB embedding models). Tagged accordingly.
#   * SQLite output is NOT byte-stable across runs (timestamps, packing).
#     This rule is correctness-only, not determinism-cacheable.
QMD_VERSION = "2.5.3"

genrule(
    name = "ingested_tng_qmd",
    srcs = ["ingested/qmd.tar"],
    outs = ["ingested/qmd-index.tar"],
    tools = [
        "//frankweiler/backend/qmd_indexer:qmd_indexer_bin",
        "build_qmd_index.py",
    ],
    cmd = " ".join([
        "python3 $(execpath build_qmd_index.py)",
        "$(execpath //frankweiler/backend/qmd_indexer:qmd_indexer_bin)",
        "$(execpath ingested/qmd.tar)",
        "$(execpath ingested/qmd-index.tar)",
        QMD_VERSION,
    ]),
    tags = [
        # qmd's first run downloads ~2GB of GGUF models from
        # HuggingFace via `npx -y qmd`. Subsequent runs use the host
        # cache at ~/.cache/qmd-models (mounted into the sandbox via
        # --sandbox_add_mount_pair in .bazelrc).
        "requires-network",
        "no-remote",
    ],
    visibility = ["//visibility:public"],
)
