load("@rules_python//python:defs.bzl", "py_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Surface this BUILD file as a data target so //tools:qmd_version_pins_test
# can read the QMD_VERSION constant out of it at test time.
exports_files(["BUILD.bazel"])

# Materialize a frankweiler data root from :ingested_tng + :ingested_tng_qmd
# into a caller-provided directory. Used by both `//frankweiler:dev_tng`
# (interactive eyeballing) and the UI e2e test (fixture setup) so the two
# paths can't drift apart.
sh_binary(
    name = "materialize_tng_root",
    srcs = ["materialize_tng_root.sh"],
    data = [
        ":ingested_tng",
        ":ingested_tng_qmd",
    ],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# Cacheable, ingested-fixture artifact.
#
# `bazelisk build //tests/fixtures:ingested_tng` runs the full
# pipeline (ingest -> render) against the checked-in TNG-themed source
# JSON and emits two outputs:
#
#   * backend_index.doltlite_db -- the doltlite (SQLite-compatible) file the backend reads.
#   * qmd.tar   -- the rendered conversation markdown tree.

filegroup(
    name = "source_json",
    srcs = glob([
        "github_api/**/*.jsonl",
        "gitlab_api/**/*.jsonl",
        "notion_web/**/*.jsonl",
    ]) + [
        # Provider fixtures moved into their respective Rust crates so
        # the sample data is co-located with the code under test.
        "//frankweiler/backend/etl/providers/slack:tng_fixture",
        "//frankweiler/backend/etl/providers/chatgpt:tng_fixture",
        "//frankweiler/backend/etl/providers/anthropic:tng_fixture",
        "//frankweiler/backend/etl/providers/beeper:tng_fixture",
        "//frankweiler/backend/etl/providers/contacts:tng_fixture",
        "//frankweiler/backend/etl/providers/email:tng_fixture",
        "//frankweiler/backend/etl/providers/signal:tng_fixture",
        "//frankweiler/backend/etl/providers/whatsapp:tng_fixture",
        "//frankweiler/backend/etl/providers/google_takeout:tng_fixture",
        "//frankweiler/backend/etl/providers/linkedin:tng_fixture",
    ],
    visibility = ["//visibility:public"],
)

# Cacheable, deterministic ingest of the TNG fixtures via
# //frankweiler/backend/sync:frankweiler_sync_bin. The orchestrator
# walks every provider's Translate step over the checked-in fixtures
# and loads the resulting sidecars into `backend_index.doltlite_db`
# (the doltlite chunk store is linked statically into the sync binary
# via `//third-party/doltlite:sqlite3`, so no host `dolt` install is
# required). This rule then tars the rendered_md tree into qmd.tar.
# Tar packaging is *not* the pipeline binary's concern — it operates
# at the layer of DB + qmd files.
genrule(
    name = "ingested_tng",
    srcs = [":source_json"],
    outs = [
        "ingested/backend_index.doltlite_db",
        "ingested/qmd.tar",
    ],
    tools = [
        "//frankweiler/backend/sync:frankweiler_sync_bin",
        # CLI that converts the signal TNG JSON spec into an encrypted
        # snapshot dir on the fly. Lives in the signal-backup library
        # crate; see that crate's BUILD.bazel.
        "//frankweiler/backend/signal-backup:signal_make_fixture",
        # Same idea for WhatsApp: spec → encrypted msgstore.db.crypt15 +
        # plaintext Media/. Root key defaults to 64 zeros, like the
        # signal fixture AEP.
        "//frankweiler/backend/etl/providers/whatsapp:whatsapp_make_fixture",
        "run_sync_pipeline.py",
        "tar_qmd.py",
    ],
    cmd = " && ".join([
        " ".join([
            "python3 $(execpath run_sync_pipeline.py)",
            "$(execpath //frankweiler/backend/sync:frankweiler_sync_bin)",
            "$(execpath //frankweiler/backend/signal-backup:signal_make_fixture)",
            "$(execpath //frankweiler/backend/etl/providers/whatsapp:whatsapp_make_fixture)",
            "'2369-04-15T00:00:00+00:00'",
            "$(RULEDIR)/sync_workspace",
            "frankweiler/backend/etl/providers/anthropic/tests/fixtures/anthropic_api",
            "frankweiler/backend/etl/providers/chatgpt/tests/fixtures/chatgpt_api",
            "frankweiler/backend/etl/providers/slack/tests/fixtures/slack_api",
            "tests/fixtures/github_api",
            "tests/fixtures/gitlab_api",
            "tests/fixtures/notion_web",
            # Beeper is different — the fixture is SQL + media, not
            # an HTTP capture tree. run_sync_pipeline.py
            # materializes a BeeperTexts-shaped dir from it on the
            # fly.
            "frankweiler/backend/etl/providers/beeper/tests/fixtures/beeper_tng",
            # Contacts (carddav) is translate-only in the fixture
            # pipeline: vCard files on disk feed the translate path
            # directly, no synth/extract for these. The directory
            # structure is `carddav_tng/<addressbook>/*.vcf`.
            "frankweiler/backend/etl/providers/contacts/tests/fixtures/carddav_tng",
            # Signal is similar to beeper — the fixture is a JSON
            # spec; run_sync_pipeline.py runs signal_make_fixture on
            # it to produce the encrypted snapshot dir before invoking
            # extract.
            "frankweiler/backend/etl/providers/signal/tests/fixtures/signal_tng/tng.json",
            # WhatsApp: same shape as signal.
            "frankweiler/backend/etl/providers/whatsapp/tests/fixtures/whatsapp_tng/tng.json",
            # Email: Google Takeout mbox file. Drives the email
            # extract path (mbox → raw doltlite → translate → render).
            "frankweiler/backend/etl/providers/email/tests/fixtures/mbox/star_trek.mbox",
            # Google Takeout root. Google Chat feed renders; the rest land
            # in the raw store.
            "frankweiler/backend/etl/providers/google_takeout/tests/fixtures/Takeout",
            # LinkedIn export dir (Connections + messages + Skills). The
            # message feeds + connections render; fetch_photos is on, so
            # the synth phase writes photo playback fixtures.
            "frankweiler/backend/etl/providers/linkedin/tests/fixtures/linkedin_tng",
        ]),
        # Copy the doltlite (SQLite-compatible) file out of the workspace.
        "cp $(RULEDIR)/sync_workspace/backend_index.doltlite_db $(execpath ingested/backend_index.doltlite_db)",
        # Tar the rendered_md tree hermetically into qmd.tar.
        " ".join([
            "python3 $(execpath tar_qmd.py)",
            "$(RULEDIR)/sync_workspace",
            "$(execpath ingested/qmd.tar)",
        ]),
    ]),
    visibility = ["//visibility:public"],
)

# py_test that drives the same `run_sync_pipeline.py` invocation as
# :ingested_tng. Three reasons it exists:
#
#   1. Plain `bazelisk test //...` exercises the end-to-end pipeline
#      (the genrule isn't a test, so it didn't before).
#   2. `bazelisk coverage` collects coverage on `frankweiler_sync_bin`
#      and `signal_make_fixture` through this test's `data` deps —
#      rules_rust's coverage transition propagates through `data`,
#      not just `deps`. See //docs/dev/coverage.md for the full workflow.
#   3. The test runs the pipeline THREE times against one data root
#      (fresh / steady-state / --reset-and-redownload) to exercise
#      signal's `ingested_backups` Blake3 resume cursor and the
#      reset-clears-cursor path.
py_test(
    name = "ingested_tng_test",
    srcs = ["ingested_tng_test.py"],
    args = [
        "$(rootpath run_sync_pipeline.py)",
        "$(rootpath //frankweiler/backend/sync:frankweiler_sync_bin)",
        "$(rootpath //frankweiler/backend/signal-backup:signal_make_fixture)",
        "$(rootpath //frankweiler/backend/etl/providers/whatsapp:whatsapp_make_fixture)",
        "2369-04-15T00:00:00+00:00",
        # FIXME: the lists below is a mishmash of paths.  We should standardize, likely inside the provider-specific directories.
        "frankweiler/backend/etl/providers/anthropic/tests/fixtures/anthropic_api",
        "frankweiler/backend/etl/providers/chatgpt/tests/fixtures/chatgpt_api",
        "frankweiler/backend/etl/providers/slack/tests/fixtures/slack_api",
        # FIXME: move these into their provider specific directories.
        "tests/fixtures/github_api",
        "tests/fixtures/gitlab_api",
        "tests/fixtures/notion_web",
        "frankweiler/backend/etl/providers/beeper/tests/fixtures/beeper_tng",
        "frankweiler/backend/etl/providers/contacts/tests/fixtures/carddav_tng",
        "frankweiler/backend/etl/providers/signal/tests/fixtures/signal_tng/tng.json",
        "frankweiler/backend/etl/providers/whatsapp/tests/fixtures/whatsapp_tng/tng.json",
        "frankweiler/backend/etl/providers/email/tests/fixtures/mbox/star_trek.mbox",
        "frankweiler/backend/etl/providers/google_takeout/tests/fixtures/Takeout",
        "frankweiler/backend/etl/providers/linkedin/tests/fixtures/linkedin_tng",
    ],
    data = [
        "run_sync_pipeline.py",
        ":source_json",
        "//frankweiler/backend/sync:frankweiler_sync_bin",
        "//frankweiler/backend/signal-backup:signal_make_fixture",
        "//frankweiler/backend/etl/providers/whatsapp:whatsapp_make_fixture",
    ],
)

# Build a QMD (BM25 + embeddings) index over the rendered TNG markdown tree
# and emit it as an overlay tar on top of `:ingested_tng`'s qmd.tar.
#
# Output `qmd-index.tar` mirrors qmd.tar's layout: paths rooted at `qmd/`,
# so extracting both archives into the same directory (e.g. with
# `tar -x --strip-components=1`) yields a complete root data directory —
# markdown tree plus `.frankweiler/qmd/index.sqlite`.
#
# Caveats:
#   * Requires `node` (and network on first run for npx to fetch qmd and its
#     ~2GB embedding models). Tagged accordingly.
#   * SQLite output is NOT byte-stable across runs (timestamps, packing).
#     This rule is correctness-only, not determinism-cacheable.
QMD_VERSION = "2.5.3"

genrule(
    name = "ingested_tng_qmd",
    srcs = ["ingested/qmd.tar"],
    outs = ["ingested/qmd-index.tar"],
    tools = [
        "//frankweiler/backend/qmd_indexer:qmd_indexer_bin",
        "build_qmd_index.py",
    ],
    cmd = " ".join([
        "python3 $(execpath build_qmd_index.py)",
        "$(execpath //frankweiler/backend/qmd_indexer:qmd_indexer_bin)",
        "$(execpath ingested/qmd.tar)",
        "$(execpath ingested/qmd-index.tar)",
        QMD_VERSION,
    ]),
    tags = [
        # qmd's first run downloads ~2GB of GGUF models from
        # HuggingFace via `npx -y qmd`. Subsequent runs use the host
        # cache at ~/.cache/qmd/models (mounted into the sandbox via
        # --sandbox_add_mount_pair in .bazelrc).
        "requires-network",
        "no-remote",
    ],
    visibility = ["//visibility:public"],
)
