load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_prost//:defs.bzl", "rust_prost_toolchain")

# Custom rust_prost_toolchain backed by our crate_universe pool.
# Referenced from MODULE.bazel via `register_toolchains("//tools/prost_toolchain")`.
# No tonic — we don't generate gRPC stubs; the only consumer
# today (frankweiler-signal-backup) is parse-only.

rust_library_group(
    name = "prost_runtime",
    deps = [
        "@frankweiler_crates//:prost",
        # `serde` is referenced by the `#[derive(::serde::Serialize)]`
        # / `#[derive(::serde::Deserialize)]` attributes injected via
        # `prost_opts` below. Without it the generated rlib fails
        # with E0433 ("cannot find `serde` in the crate root").
        "@frankweiler_crates//:serde",
    ],
)

rust_prost_toolchain(
    name = "prost_toolchain_impl",
    # Generate the prost types with serde Serialize/Deserialize so the
    # extract path can call `serde_json::to_string(&frame)?` directly.
    # The raw store records semantic content as JSON; see
    # `docs/data_architecture_ingestion.md` §"Wire-fidelity of the raw
    # store". Each entry becomes one `--prost_opt=<entry>` on the
    # protoc-gen-prost command line.
    # protoc-gen-prost splits a single --prost_opt on `,`, so we
    # can't pass `#[derive(A, B)]` as one option — split into two
    # separate `type_attribute` directives. Both get applied to
    # every generated type.
    prost_opts = [
        "type_attribute=.=#[derive(::serde::Serialize)]",
        "type_attribute=.=#[derive(::serde::Deserialize)]",
    ],
    prost_plugin = "@frankweiler_crates//:protoc-gen-prost__protoc-gen-prost",
    prost_runtime = ":prost_runtime",
    prost_types = "@frankweiler_crates//:prost-types",
    # `tonic_plugin_flag` has a non-empty default in rules_rust_prost
    # ≥0.70, so its truthiness alone trips the "all or none" tonic
    # check unless we explicitly blank it.
    tonic_plugin_flag = "",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "prost_toolchain",
    toolchain = ":prost_toolchain_impl",
    toolchain_type = "@rules_rust_prost//:toolchain_type",
    visibility = ["//visibility:public"],
)
