load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

rust_library(
    name = "frankweiler_core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "frankweiler_core",
    edition = "2021",
    visibility = ["//frankweiler:__subpackages__"],
    deps = [
        "//frankweiler/backend/schema:frankweiler_schema",
        "@frankweiler_crates//:anyhow",
        "@frankweiler_crates//:async-trait",
        "@frankweiler_crates//:chrono",
        "@frankweiler_crates//:serde",
        "@frankweiler_crates//:serde_json",
        "@frankweiler_crates//:serde_yaml",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:thiserror",
        "@frankweiler_crates//:tokio",
        "@frankweiler_crates//:uuid",
    ],
)

rust_test(
    name = "core_unittests",
    size = "small",
    crate = ":frankweiler_core",
    edition = "2021",
)

# Verify all grid rows produced from the checked-in TNG fixtures carry a
# non-empty `when`. Tool_use / tool_result blocks lack an intrinsic
# timestamp; this test guards the synthetic-timestamp fallback in
# push_anthropic_blocks (and would also catch a regression in OpenAI
# message timestamps).
#
# Tagged like the upstream fixture: dolt is required to build dump.sql,
# so the test only runs locally / on hosts with dolt installed.
rust_test(
    name = "fixture_timestamps_test",
    srcs = ["tests/fixture_timestamps.rs"],
    edition = "2021",
    data = ["//tests/fixtures:ingested/dump.sql"],
    env = {
        "FRANKWEILER_TEST_DUMP_SQL": "$(rootpath //tests/fixtures:ingested/dump.sql)",
    },
    tags = [
        "requires-dolt",
        "no-remote",
        "no-sandbox",
    ],
    deps = [
        ":frankweiler_core",
        "@frankweiler_crates//:sqlx",
        "@frankweiler_crates//:tokio",
    ],
)
